--- a/xprof/tally_utils.hpp.erb
+++ b/xprof/tally_utils.hpp.erb
@@ -129,15 +129,15 @@ class <%= n %>: public StatIprof {
 %>
 
 thapi_function_name f_demangle_name(thapi_function_name mangle_name) {
-   const char* result = mangle_name.c_str();
+   std::string result = mangle_name;
 
    // C++ don't handle PCRE, hence and lazy/non-greedy and $.
    const std::regex base_regex("__omp_offloading_[^_]+_[^_]+_(.*?)_[^_]+$");
    std::smatch base_match;
    if (std::regex_match(mangle_name, base_match, base_regex) && base_match.size() == 2)
-      result = base_match[1].str().c_str();
-
-   const char* demangle = my_demangle(result);
+      result = base_match[1].str();
+      
+   const char* demangle = my_demangle(result.c_str());
    if (demangle)
       return thapi_function_name{demangle};
    else
