--- a/cuda/cudainterval_callbacks.cpp.erb
+++ b/cuda/cudainterval_callbacks.cpp.erb
@@ -26,7 +26,7 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
      // Message creation
      bt_message *message = create_host_message(hostname, process_id, thread_id, name, ts, duration, err,
                             cudainterval_iter_g->dispatch->host_event_class,
-                            self_message_iterator_g,
+                            cudainterval_self_message_iterator_g,
                             cudainterval_iter_g->dispatch->stream);
 
      cudainterval_callbacks_state* state = (cudainterval_callbacks_state*) cudainterval_iter_g->callbacks_state;
@@ -40,7 +40,7 @@ void create_and_enqueue_device_message(const char* hostname, const process_id_t 
      // Message creation
      bt_message *message = create_device_message(hostname, process_id, thread_id, device_id, subdevice_id, name, ts, duration, err,
                             cudainterval_iter_g->dispatch->device_event_class,
-                            self_message_iterator_g,
+                            cudainterval_self_message_iterator_g,
                             cudainterval_iter_g->dispatch->stream);
 
 
@@ -55,7 +55,7 @@ static void create_and_enqueue_traffic_message(const char* hostname, const proce
      // Message creation
      bt_message *message = create_traffic_message(hostname, process_id, thread_id, name, size,
                                                   cudainterval_iter_g->dispatch->traffic_event_class,
-                                                  self_message_iterator_g,
+                                                  cudainterval_self_message_iterator_g,
                                                   cudainterval_iter_g->dispatch->stream);
 
      cudainterval_callbacks_state* state = (cudainterval_callbacks_state*) cudainterval_iter_g->callbacks_state;
@@ -69,19 +69,19 @@ static void create_and_enqueue_traffic_message(const char* hostname, const proce
 
 %>
 
-bool downstream_message_queue_empty(struct cudainterval_message_iterator *interval_dispatch_iter)
+bool cudainterval_downstream_message_queue_empty(struct cudainterval_message_iterator *interval_dispatch_iter)
 {
     cudainterval_callbacks_state* state = (cudainterval_callbacks_state*) interval_dispatch_iter->callbacks_state;
     return state->downstream_message_queue.empty();
 }
 
-size_t downstream_message_queue_size(struct cudainterval_message_iterator *interval_dispatch_iter)
+size_t cudainterval_downstream_message_queue_size(struct cudainterval_message_iterator *interval_dispatch_iter)
 {
     cudainterval_callbacks_state* state = (cudainterval_callbacks_state*)  interval_dispatch_iter->callbacks_state;
     return state->downstream_message_queue.size();
 }
 
-const bt_message* downstream_message_queue_pop(struct cudainterval_message_iterator *interval_dispatch_iter)
+const bt_message* cudainterval_downstream_message_queue_pop(struct cudainterval_message_iterator *interval_dispatch_iter)
 {
     cudainterval_callbacks_state* state = (cudainterval_callbacks_state*) interval_dispatch_iter->callbacks_state;
     const bt_message* m = state->downstream_message_queue.front();
@@ -89,6 +89,11 @@ const bt_message* downstream_message_queue_pop(struct cudainterval_message_itera
     return m;
 }
 
+void cudainterval_downstream_message_queue_push(struct cudainterval_message_iterator *interval_dispatch_iter, const bt_message *message)
+{
+    cudainterval_callbacks_state* state = (cudainterval_callbacks_state*) interval_dispatch_iter->callbacks_state;
+    state->downstream_message_queue.push(message);
+}
 
 <%#
   _
